feat: get user's movies
